feat: add user model

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnection": "Data Source=soo\\sqlexpress;Initial Catalog=BadmintonHub;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
