feat: add booking model

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServerConnection": "Data Source=soo\\sqlexpress;Initial Catalog=BadmintonHub;Integrated Security=True;Trust Server Certificate=True"
+  },
+  "Jwt": {
+    "Key": "This_is_a_secret_key_for_authentication",
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001"
   }
 }
