--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,14 @@
     "Key": "This_is_a_secret_key_for_authentication",
     "Issuer": "https://localhost:5001",
     "Audience": "https://localhost:5001"
+  },
+  "MomoPayment": {
+    "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
+    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
+    "AccessKey": "F8BBA842ECF85",
+    "ReturnUrl": "https://localhost:7297/checkout/payment-callback",
+    "NotifyUrl": "https://localhost:7297/checkout/momo-notify",
+    "PartnerCode": "MOMO",
+    "RequestType": "captureMoMoWallet"
   }
 }
