--- a/appsettings.json
+++ b/appsettings.json
@@ -15,12 +15,12 @@
     "Audience": "https://localhost:5001"
   },
   "MomoPayment": {
-    "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
+    "MomoApiUrl": "https://test-payment.momo.vn/v2/gateway/api/create",
     "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
     "AccessKey": "F8BBA842ECF85",
     "ReturnUrl": "https://localhost:7297/checkout/payment-callback",
     "NotifyUrl": "https://localhost:7297/checkout/momo-notify",
     "PartnerCode": "MOMO",
-    "RequestType": "captureMoMoWallet"
+    "RequestType": "captureWallet"
   }
 }
