--- a/appsettings.json
+++ b/appsettings.json
@@ -5,22 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SqlServerConnection": "Data Source=soo\\sqlexpress;Initial Catalog=BadmintonHub;Integrated Security=True;Trust Server Certificate=True"
-  },
-  "Jwt": {
-    "Key": "This_is_a_secret_key_for_authentication",
-    "Issuer": "https://localhost:5001",
-    "Audience": "https://localhost:5001"
-  },
-  "MomoPayment": {
-    "MomoApiUrl": "https://test-payment.momo.vn/v2/gateway/api/create",
-    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
-    "AccessKey": "F8BBA842ECF85",
-    "ReturnUrl": "https://localhost:7297/checkout/payment-callback",
-    "NotifyUrl": "https://localhost:7297/checkout/momo-notify",
-    "PartnerCode": "MOMO",
-    "RequestType": "captureWallet"
-  }
+  "AllowedHosts": "*"
 }
